--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head>
-    <title>COLIBRI</title>
+    <title>Wemox_</title>
     <meta charset="utf-8">
     <meta name="facebook-domain-verification" content="pfkush9zcpv2qd92fdcrhbr49wme2v" />
     <link rel="stylesheet" type="text/css" href="css/estilos2colibri1.css">
