--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <script>
     function contextProvider() {
       return {
-        'person_id': { value: 'c0c4e505-736f-ee11-8179-000d3ac1c40f', isDisplayable: true },
+        'peopleId': { value: 'c0c4e505-736f-ee11-8179-000d3ac1c40f', isDisplayable: true },
         'rol': { value: 'OPERADOR', isDisplayable: true }
       };
     }
