--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <script>
     function contextProvider() {
       return {
-        'peopleId': { value: "35.001" , isDisplayable: true },
+        'peopleId': { value: 35.001 , isDisplayable: true },
         'rol': { value: 'OPERADOR', isDisplayable: true }
       };
     }
