--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
   <script>
     function contextProvider() {
       return {
-        'peopleId': { value: 35.001 , isDisplayable: true },
-        'rol': { value: 'OPERADOR', isDisplayable: true }
+        'peopleId': { value: 35.002 , isDisplayable: true },
+        'rol': { value: OPERADOR, isDisplayable: true }
       };
     }
 
