--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     function contextProvider() {
       return {
         'peopleId': { value: 35.002 , isDisplayable: true },
-        'rol': { value: OPERADOR, isDisplayable: true }
+        'rol': { value: "OPERADOR" , isDisplayable: true }
       };
     }
 
