--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     function contextProvider() {
       return {
         'peopleId': { value: 35.002 , isDisplayable: true },
-        'rol': { value: "OPERADOR" , isDisplayable: true }
+        'role': { value: "OPERATOR", isDisplayable: true },
+          'department': { value: 1, isDisplayable: true } 
       };
     }
 
