--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       return {
         'peopleId': { value: 35.001 , isDisplayable: true },
         'role': { value: "OPERATOR", isDisplayable: true },
-          'department': { value: 100000 , isDisplayable: true } 
+          'VarRespuestaCrisF': { value: "te voy a extrañar" , isDisplayable: true } 
       };
     }
 
