--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       return {
         'peopleId': { value: 35.001 , isDisplayable: true },
         'role': { value: "OPERATOR", isDisplayable: true },
-          'VarRespuestaCrisF': { value: "Bienvenido CIIIIISSSSSSSS se te extrañó en el equipo...!!!!!" , isDisplayable: true } 
+          'VarRespuestaCrisF': { value: "Bienvenido CRRRRRIIIIISSSSSSSS se te extrañó en el equipo...!!!!!" , isDisplayable: true } 
       };
     }
 
