--- a/index.html
+++ b/index.html
@@ -24,25 +24,7 @@
       <title>Prueba de Chat Copilot</title>
 
   <!-- Script del widget de Copilot Studio -->
-  <script id="Microsoft_Omnichannel_LCWidget"
-    src="https://oc-cdn-public-sam.azureedge.net/livechatwidget/scripts/LiveChatBootstrapper.js"
-    data-app-id="f7c52917-3a8c-4a22-acdf-fd429402b2c7"
-    data-lcw-version="prod"
-    data-org-id="afdaec26-8d3c-ee11-94d3-002248debce1"
-    data-org-url="https://m-afdaec26-8d3c-ee11-94d3-002248debce1.br.omnichannelengagementhub.com"
-    async
-    onerror="(function(el){
-      el.parentNode.removeChild(el);
-      var s=document.createElement('script');
-      s.src='https://ocprodpublicsamgs.blob.core.windows.net/livechatwidget/scripts/LiveChatBootstrapper.js';
-      s.setAttribute('id', 'Microsoft_Omnichannel_LCWidget');
-      s.setAttribute('data-app-id', 'f7c52917-3a8c-4a22-acdf-fd429402b2c7');
-      s.setAttribute('data-lcw-version', 'prod');
-      s.setAttribute('data-org-id', 'afdaec26-8d3c-ee11-94d3-002248debce1');
-      s.setAttribute('data-org-url', 'https://m-afdaec26-8d3c-ee11-94d3-002248debce1.br.omnichannelengagementhub.com');
-      document.body.appendChild(s);
-    })(this);">
-  </script>
+<script id="Microsoft_Omnichannel_LCWidget" src="https://oc-cdn-public-sam.azureedge.net/livechatwidget/scripts/LiveChatBootstrapper.js" onerror="(function(el){el.parentNode.removeChild(el);var s=document.createElement('script');s.src='https://ocprodpublicsamgs.blob.core.windows.net/livechatwidget/scripts/LiveChatBootstrapper.js';s.setAttribute('id', 'Microsoft_Omnichannel_LCWidget');s.setAttribute('data-app-id', 'fa54e582-80d7-4c85-a876-83c1cd755a4e');s.setAttribute('data-lcw-version', 'prod');s.setAttribute('data-org-id', 'afdaec26-8d3c-ee11-94d3-002248debce1');s.setAttribute('data-org-url', 'https://m-afdaec26-8d3c-ee11-94d3-002248debce1.br.omnichannelengagementhub.com');document.body.appendChild(s);})(this);" data-app-id="fa54e582-80d7-4c85-a876-83c1cd755a4e" data-lcw-version="prod" data-org-id="afdaec26-8d3c-ee11-94d3-002248debce1" data-org-url="https://m-afdaec26-8d3c-ee11-94d3-002248debce1.br.omnichannelengagementhub.com" async></script>
 
   <!-- Contexto ficticio del usuario -->
   <script>
