--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     function contextProvider() {
       return {
         'peopleId': { value: 35.001 , isDisplayable: true },
-        'role': { value: "OPERADOR", isDisplayable: true },
+        'role': { value: "ADMINISTRADOR", isDisplayable: true },
           'VarRespuestaCrisF': { value: "Bienvenido CRRRRRIIIIISSSSSSSS se te extrañó en el equipo...!!!!!" , isDisplayable: true } 
       };
     }
