--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Open+Sans:wght@300;400;600;700;800&family=Parisienne&display=swap"
         rel="stylesheet">
     <!-- Script del widget de Copilot Studio -->
-    <script id="Microsoft_Omnichannel_LCWidget" src="https://oc-cdn-public-sam.azureedge.net/livechatwidget/scripts/LiveChatBootstrapper.js" onerror="(function(el){el.parentNode.removeChild(el);var s=document.createElement('script');s.src='https://oc-cdn-public-sam.azureedge.net/livechatwidget/scripts/LiveChatBootstrapper.js';document.body.appendChild(s);})(this)">
-    </script>
+<script id="Microsoft_Omnichannel_LCWidget" src="https://oc-cdn-public-sam.azureedge.net/livechatwidget/scripts/LiveChatBootstrapper.js"></script>
     <!-- Contexto ficticio del usuario -->
     <script>
       function contextProvider() {
