--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/estilos2colibri1.css">
     <link rel="stylesheet" type="text/css" href="css/1normalize.css">
     <link rel="icon" href="multi/logo.png">
+    <link rel="stylesheet" type="text/css" href="css/custom-copilot-chat.css">
     <meta name="keywords" content="inflabe,metegol,tejo,ping pong">
     <meta name="description"
         content="COLIBRI,es una empresa que te ayuda a realizar tu evento por medio de juegos para todas las edades.Por eso es que te aseguramos la diversion de tus invitados y sobre todo la tuya">
